--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Goulspace</title>
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      defer
+    ></script>
+    <script src="index.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Goulspace</title>
-  <link rel="icon" type="image/png" href="images/favicon.png" />
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
-  <script src="index.js" defer></script>
-</head>
-
-<body>
-  <img id="light0" src="images/lightsRed.png" alt="">
-  <img id="light1" src="images/lightsBlue.png" alt="">
-  <div id="container"></div>
-  <div class="wrapper">
-    <button class="one"></button>
-    <button class="two"></button>
-    <button class="three"></button>
-  </div>
-  <button class="light"></button>
-
-</body>
-
-
+  <body>
+    <div id="wrapper">
+      <img id="light0" src="images/lightsRed.png" alt="" />
+      <img id="light1" src="images/lightsBlue.png" alt="" />
+      <div id="graffitiContainer"></div>
+      <div id="canWrapper">
+        <img class="can" id="one" src="images/ylwcan.png"></img>
+        <img class="can" id="two" src="images/blu.png"></img>
+        <img class="can" id="three" src="images/greencan.png"></img>
+      </div>
+      <img id="light" src="images/coppers.png"></img>
+    </div>
+  </body>
 </html>
