--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <body>
     <div id="wrapper">
-      <img id="light0" src="images/lightsRed.png" alt="" />
-      <img id="light1" src="images/lightsBlue.png" alt="" />
+      <img class="policeLights" id="policeLight0" src="images/lightsRed.png" alt="" />
+      <img class="policeLights" id="policeLight1" src="images/lightsBlue.png" alt="" />
       <div id="graffitiContainer"></div>
       <div id="canWrapper">
         <img class="can" id="one" src="images/ylwcan.png"></img>
