--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goulspace</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="styles.css" />
@@ -16,6 +16,7 @@
 
   <body>
     <div id="wrapper">
+      <img id="light" src="images/coppers.png"></img>
       <img class="policeLights" id="policeLight0" src="images/lightsRed.png" alt="" />
       <img class="policeLights" id="policeLight1" src="images/lightsBlue.png" alt="" />
       <div id="graffitiContainer"></div>
@@ -24,7 +25,6 @@
         <img class="can" id="two" src="images/blu.png"></img>
         <img class="can" id="three" src="images/greencan.png"></img>
       </div>
-      <img id="light" src="images/coppers.png"></img>
     </div>
   </body>
 </html>
